fix align in filters

--- a/sedona/dev/styl/hotels.styl
+++ b/sedona/dev/styl/hotels.styl
@@ -391,7 +391,8 @@ width 328px
     margin-bottom 47px
     width 88px
     height 17px
-    background-image url(../img/icon/stars.png)
+    background-image url(../img/sprite.png)
+    background-position -119px 39px
     &--two {
       width 40px
     }
